@@ -39,7 +39,9 @@ class DumpGenderStats(Tool.Tool, ManagedWindow.ManagedWindow):
     def __init__(self, dbstate, uistate, options_class, name, callback=None):
         self.label = _("Gender Statistics tool")
         Tool.Tool.__init__(self, dbstate, options_class, name)
-        ManagedWindow.ManagedWindow.__init__(self,uistate,[],self.__class__)
+        if uistate:
+            ManagedWindow.ManagedWindow.__init__(self,uistate,[],
+                                                 self.__class__)
 
         stats_list = []
 
