@@ -1,4 +1,7 @@
 2006-12-01  Alex Roitman  <shura@gramps-project.org>
+	* src/ArgHandler.py (cl_action): Properly call CLI tool.
+	* src/plugins/DumpGenderStats.py (__init__): Fix CLI mode.
+	* src/PluginUtils/_Tool.py (cli_tool): Fix CLI tools.
 	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship new file.
 	* src/plugins/RebuildRefMap.py: Add new plugin.
 	* src/GrampsDb/_GrampsBSDDB.py (reindex_reference_map): Fix reindexing.
